--- a/Mission_to_Mars/Templates/index.html
+++ b/Mission_to_Mars/Templates/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mission to Mars</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  />
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mission to Mars</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    />
 
-<body>
+  </head>
+  <body>
     <div class="container">
-
+      
       <div class="jumbotron text-center">
-          <h1>Mission to Mars</h1>
-          <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Mars Data</a></p>
+        <h1>Mission to Mars</h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Mars Data</a></p>
       </div>
 
       <div class="row" id="mars-news">
@@ -35,12 +35,12 @@
           <h2>Featured Mars Image </h2>
           <img
             src="{{mars.featured_image_url}}" alt= "Features Mars Image">
-          
-          
+            
+            
         </div>
 
         <div class="col-xs-4">
-        <!-- Mars Facts -->
+          <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h3>Mars Facts</h3>
             <table class="table table-striped">
@@ -49,29 +49,29 @@
           </div>
         </div>
       </div>
-    
+      
 
       <div class="row" id="mars-hemispheres">
         <div class="page-header" style="height: 50px">
           <h2 class="align-items-center"><u>Mars Hemispheres</u></h2>  
+        </div>
       </div>
-    </div>
-    </br>
-    <div class="row">       
-            {% for hem in mars.hemisphere_images %} 
-              <div class="col-6 border">
-              </br>
+      </br>
+      <div class="row">       
+              {% for hemisphere in mars.hemisphere_images %} 
+                <div class="col-6 border">
+                </br>
                     <div>
-                      <img width="512 px" height="512 px" src="{{hem.img_url}}">
+                      <img width="512 px" height="512 px" src="{{hemisphere.images_url}}">
                     </div>
 
                     <div>
-                      <h4> {{hem.title}} </h4>  
+                      <h4> {{hemisphere.titles}} </h4>  
                     </div>
-            
-              </div>
-            {% endfor %}
+              
+                </div>
+              {% endfor %}
+        </div>
       </div>
-    </div>
   </body>
 </html>
